# agentswap-cli

./: Cargo.toml  README.md
src/: client.rs  credentials.rs  display.rs  main.rs  routes.rs  tokens.rs
src/client/: transport.rs
src/commands/: batch_quote.rs  buy_quota.rs  chains.rs  health.rs  key_info.rs  mod.rs  pools.rs  pricing.rs  quota_claim.rs  quote.rs  register.rs  route_explain.rs  tokens.rs
src/tokens/: registry.rs
src/tokens/registry/: arbitrum.rs  base.rs  ethereum.rs
