[package]
name = "agentswap"
version = "0.2.0"
edition = "2024"
description = "AgentSwap CLI — AI-agent-optimized DEX aggregator"
license = "MIT"
repository = "https://github.com/agentswapco/agentswap-cli"
keywords = ["defi", "dex", "swap", "aggregator", "cli"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "agentswap"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.6", default-features = false, features = ["std", "signers", "signer-local"] }
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "6"
eyre = "0.6"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
